K8S-manifest/dashboard-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f ./docker-compose.yml -o K8S-manifest/
    kompose.version: 1.22.0 (955b78124)
  creationTimestamp: null
  labels:
    io.kompose.service: dashboard
  name: dashboard
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: dashboard
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f ./docker-compose.yml -o K8S-manifest/
        kompose.version: 1.22.0 (955b78124)
      creationTimestamp: null
      labels:
        io.kompose.service: dashboard
    spec:
      containers:
        - image: ghcr.io/saleor/saleor-dashboard:3.14.4
          name: dashboard
          ports:
            - containerPort: 80
          resources: {}
      restartPolicy: Always
status: {}
