K8S-manifest/mailpit-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f ./docker-compose.yml -o K8S-manifest/
    kompose.version: 1.22.0 (955b78124)
  creationTimestamp: null
  labels:
    io.kompose.service: mailpit
  name: mailpit
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: mailpit
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f ./docker-compose.yml -o K8S-manifest/
        kompose.version: 1.22.0 (955b78124)
      creationTimestamp: null
      labels:
        io.kompose.network/saleor-backend-tier: "true"
        io.kompose.service: mailpit
    spec:
      containers:
        - image: axllent/mailpit
          name: mailpit
          ports:
            - containerPort: 1025
            - containerPort: 8025
          resources: {}
      restartPolicy: Always
status: {}
