K8S-manifest/worker-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f ./docker-compose.yml -o K8S-manifest/
    kompose.version: 1.22.0 (955b78124)
  creationTimestamp: null
  labels:
    io.kompose.service: worker
  name: worker
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: worker
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f ./docker-compose.yml -o K8S-manifest/
        kompose.version: 1.22.0 (955b78124)
      creationTimestamp: null
      labels:
        io.kompose.network/saleor-backend-tier: "true"
        io.kompose.service: worker
    spec:
      containers:
        - args:
            - celery
            - -A
            - saleor
            - --app=saleor.celeryconf:app
            - worker
            - --loglevel=info
            - -B
          image: ghcr.io/saleor/saleor:3.14.2
          name: worker
          resources: {}
          volumeMounts:
            - mountPath: /app/media
              name: saleor-media
      restartPolicy: Always
      volumes:
        - name: saleor-media
          persistentVolumeClaim:
            claimName: saleor-media
status: {}
