K8S-manifest/dashboard-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f ./docker-compose.yml -o K8S-manifest/
    kompose.version: 1.22.0 (955b78124)
  creationTimestamp: null
  labels:
    io.kompose.service: dashboard
  name: dashboard
spec:
  ports:
    - name: "9003"
      protocol: TCP
      port: 9003
      targetPort: 80
  selector:
    io.kompose.service: dashboard
status:
  loadBalancer: {}
