K8S-manifest/mailpit-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f ./docker-compose.yml -o K8S-manifest/
    kompose.version: 1.22.0 (955b78124)
  creationTimestamp: null
  labels:
    io.kompose.service: mailpit
  name: mailpit
spec:
  ports:
    - name: "1025"
      port: 1025
      targetPort: 1025
    - name: "8025"
      port: 8025
      targetPort: 8025
  selector:
    io.kompose.service: mailpit
status:
  loadBalancer: {}
